# Food-Ordering-Chat-App

./: .env  .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/: __init__.py  config.py
backend/app/agents/: main.py
backend/app/agents/MCP/: server.py
backend/app/agents/my_agents/: assistant_agent.py
backend/app/agents/my_config/: gemini_config.py
backend/app/api/: order_routes.py  user_routes.py
backend/app/db/: main.py  schemas.py
backend/app/db/models/: cart_model.py  conversation_msg_model.py  menu_model.py  order_model.py  orderitems_model.py  user_model.py
backend/app/services/: agent_service.py  order_service.py  user_service.py
frontend/: main_page.py
